System to save API Key in Property

--- a/gui.html
+++ b/gui.html
@@ -7,6 +7,8 @@
   <form>
     <label for="apiKey">Hunter.io API Key:</label>
     <input type="text" id="apiKey" name="apiKey"><br><br>
+    <input type="button" value="Save" onclick="saveApiKey()">
   </form>
+  <script src="ApiKeyDialog.js"></script>
 </body>
 </html>
