Menu + Item to save api key

--- a/ApiKeyDialog.html
+++ b/ApiKeyDialog.html
@@ -9,6 +9,12 @@
     <input type="text" id="apiKey" name="apiKey"><br><br>
     <input type="button" value="Save" onclick="saveApiKey()">
   </form>
-  <script src="ApiKeyDialog.js"></script>
+  <script>
+    function saveApiKey() {
+      var apiKey = document.getElementById('apiKey').value;
+      google.script.run.saveApiKey(apiKey);
+      google.script.host.close();
+    }
+  </script>
 </body>
 </html>
