Add Label on Menu to see existingApiKey

--- a/ApiKeyDialog.html
+++ b/ApiKeyDialog.html
@@ -2,19 +2,26 @@
 <html>
 <head>
   <base target="_top">
-</head>
-<body>
-  <form>
-    <label for="apiKey">Hunter.io API Key:</label>
-    <input type="text" id="apiKey" name="apiKey"><br><br>
-    <input type="button" value="Save" onclick="saveApiKey()">
-  </form>
   <script>
+    function loadApiKey() {
+      google.script.run.withSuccessHandler(function(apiKey) {
+        document.getElementById('existingApiKey').textContent = apiKey ? 'Existing API Key: ' + apiKey : 'No API Key saved';
+      }).getApiKey();
+    }
     function saveApiKey() {
       var apiKey = document.getElementById('apiKey').value;
       google.script.run.saveApiKey(apiKey);
       google.script.host.close();
     }
+    window.onload = loadApiKey;
   </script>
+</head>
+<body>
+  <form>
+    <label id="existingApiKey">Loading...</label><br><br>
+    <label for="apiKey">Hunter.io API Key:</label>
+    <input type="text" id="apiKey" name="apiKey"><br><br>
+    <input type="button" value="Save" onclick="saveApiKey()">
+  </form>
 </body>
 </html>
