Edit some label Connect -> Save

--- a/ApiKeyDialog.html
+++ b/ApiKeyDialog.html
@@ -63,9 +63,9 @@
   <p>Find emails from a prospect list</p>
   <form>
     <label id="existingApiKey">Loading...</label><br><br>
-    <label for="apiKey">Hunter.io API Key:</label>
+    <label for="apiKey">Save Hunter.io API Key:</label>
     <input type="text" id="apiKey" name="apiKey"><br><br>
-    <input type="button" value="Connect" onclick="saveApiKey()">
+    <input type="button" value="Save" onclick="saveApiKey()">
   </form>
 </body>
 </html>
